--- a/site-one-1/Index.html
+++ b/site-one-1/Index.html
@@ -13,12 +13,23 @@
 <body>
     <main>
         <header>
-            <nav>
-                
+            <div class="generic-header" id="generic-header">
+
+                <nav>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <img src="">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+            </div>
             </nav>
 
         </header>
     </main>
+
 
 </body>
 
